--- a/web-apps/templates/index.html
+++ b/web-apps/templates/index.html
@@ -21,6 +21,16 @@
                     Explore
                 </div>
             </a>
+            <div class="background dropdown-center">
+                <button aria-expanded='false' class="btn dropdown-toggle"data-bs-toggle='dropdown' id="drop-btn" type="button">
+                    Try me
+                </button>
+                <ul class="dropdown-menu text-center">
+                    <li><a class="dropdown-item" href="#" id="flow">Flow</a></li>
+                    <li><a class="dropdown-item" href="#" id="rain">Rain</a></li>
+                    <li><a class="dropdown-item" href="#" id="snow">Snow</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <nav class="nav_bar">
