--- a/web-apps/templates/playlister/search.html
+++ b/web-apps/templates/playlister/search.html
@@ -47,6 +47,7 @@
                         <button class="btn btn-outline-info" id="button-addon2" type="submit">Search</button>
                     </div>
                 </div>
+                <div class="accordion mb-3" id="accordionParent">
                 {% if not search_data %}
                     <div class="d-flex justify-content-center"></div>
                 {% else %}
