--- a/web-apps/templates/playlister/edit_playlist.html
+++ b/web-apps/templates/playlister/edit_playlist.html
@@ -27,10 +27,16 @@
                         <label class="form-label text-color" for="title_input">Title</label>
                         <input autocomplete="off" class="form-control" id="title_input" name="playlist_name" required type="text" value="{{ name }}">
                     </div>
+
+
+                    <!-- FIX DESCRIPTION REQUIREMENT -->
                     <div class="form-width m-3">
                         <label class="form-label text-color" for="description_input">Description</label>
                         <textarea autocomplete="off" class="form-control" id="description_input" name="playlist_desc" required rows="3">{{ description }}</textarea>
                     </div>
+
+
+                    
                 </div>
                 <div class="w-100">
                     <hr class="my-hr">
