--- a/web-apps/templates/layout.html
+++ b/web-apps/templates/layout.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <!-- Custom canvas JS -->
     <script src="{{ url_for('static', filename='app.js') }}"></script>
-    <script src="{{ url_for('static', filename='flow.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='flow.js') }}"></script> -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/4390.png') }}">
@@ -36,7 +36,7 @@
 
 <body>
 
-        {% block main %}{% endblock %}
+    {% block main %}{% endblock %}
 
 </body>
 
