--- a/web-apps/templates/index.html
+++ b/web-apps/templates/index.html
@@ -6,12 +6,12 @@
 
 {% block main %}
     <div class="hero" id="hero">
-        <div class="canvas">
+        <!-- <div class="canvas">
             <canvas class="dynamic" style="display: block;"></canvas>
-        </div>
-        <!-- <div class="canvas" id="default"></div>
+        </div> -->
+        <div class="canvas" id="default"></div>
         <script src="{{ url_for('static', filename='particles/particles.js') }}" type="text/javascript"></script>
-        <script src="{{ url_for('static', filename='particles/default.js') }}" type="text/javascript"></script> -->
+        <script src="{{ url_for('static', filename='particles/default.js') }}" type="text/javascript"></script>
         <div class="heading">
             <div class="heading1">
                 hello, i'm <span>Josh</span>
@@ -20,7 +20,7 @@
                 <p>a self-taught,</p>
                 <p>full-stack developer</p>
             </div>
-            <div class="dropdown-center">
+            <div class="dropdown-center" style="visibility: hidden;"> <!-- TODO -->
                 <button aria-expanded='false' class="btn dropdown-toggle" data-bs-toggle='dropdown' id="drop-btn" type="button">
                     Particle Menu
                 </button>
@@ -79,6 +79,86 @@
                 </div>
             </div>
             <div class="skills">
+                <div class="skills-slide">
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/css.svg') }}" alt="CSS Logo">
+                        <p class="item-name">
+                            CSS
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/express.svg') }}" alt="Express.js Logo">
+                        <p class="item-name">
+                            Express.js
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/flask.svg') }}" alt="Flask Logo">
+                        <p class="item-name">
+                            Flask
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/git.svg') }}" alt="Git Logo">
+                        <p class="item-name">
+                            Git
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/html.svg') }}" alt="HTML Logo">
+                        <p class="item-name">
+                            HTML
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/js.svg') }}" alt="JavaScript Logo">
+                        <p class="item-name">
+                            JavaScript
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/mongodb.svg') }}" alt="MongoDB Logo">
+                        <p class="item-name">
+                            MongoDB
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/node.svg') }}" alt="Node.js Logo">
+                        <p class="item-name">
+                            Node.js
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/postgresql.svg') }}" alt="PostgreSQL Logo">
+                        <p class="item-name">
+                            PostgreSQL
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/python.svg') }}" alt="Python Logo">
+                        <p class="item-name">
+                            Python
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/react.svg') }}" alt="React.js Logo">
+                        <p class="item-name">
+                            React.js
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/sql.svg') }}" alt="SQL Logo">
+                        <p class="item-name">
+                            SQL
+                        </p>
+                    </div>
+                    <div class="skills-item">
+                        <img src="{{ url_for('static', filename='images/sqlite.svg') }}" alt="SQLite Logo">
+                        <p class="item-name">
+                            SQLite
+                        </p>
+                    </div>
+                </div>
                 <div class="skills-slide">
                     <div class="skills-item">
                         <img src="{{ url_for('static', filename='images/css.svg') }}" alt="CSS Logo">
